--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="한가지 사이트를 다양한 프레임워크를 통해 만들어 보는 포트폴리오 사이트입니다." />
-    <meta name="keyword" content="포트폴리오, 리액트, 뷰, 넥스트, 웹스토리보이, portfolio, react.js, vue.js, next.js, webstoryboy" />
+    <meta name="keyword" content="포트폴리오, 리액트, 뷰, 넥스트, 웹스토리보이, portfolio, react.js, vue.js, next.js" />
     <title>포트폴리오 사이트 만들기 😇 Vite-Site</title>
 
     <link rel="icon" type="image/svg+xml" href="../src/img/ifkakao.png" />
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Vite 시작하기</h1>
-    <script type="module" src="../src/js/main.js"></script>
+    <script type="module" src="/port2024-vite/src/js/main.js"></script>
 </body>
 
 </html>
