--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Vite 시작하기</h1>
-    <script type="module" src="/port2024-vite/src/js/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
 </body>
 
 </html>
