--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <a href="#" target="_blank" class="img"><img src="./src/img/nexon pc방.png" alt=""></a>
                         <p class="img_text">Nexon</br>pc방</p>
                         <h3 class="title">Nexon pc방</h3>
-                        <a href="http://127.0.0.1:5501/23.12.13%20[Nexon]/index.html" target="_blank"
+                        <a href="http://rudals2006.dothome.co.kr/23.12.13%20[Nexon]/index.html" target="_blank"
                             class="site">사이트 보기</a>
                     </article>
                     <article class="pub_item p4">
