--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyoengmin</title>
+    <link rel="icon" href="./src/img/꽃.png" type="image/png">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
@@ -31,48 +32,51 @@
         <section id="intro">
             <div class="intro_inner">
                 <div class="inner_main">
-                    <img src="./src/img/메인.png" alt="">
-                </div>
-                <div class="inner_new">
-                    <img src="./src/img/new.png" alt="">
-                </div>
-                <div class="inner_memo">
-                    <img src="./src/img/memo.png" alt="">
+                    <img src="./src/img/메인1.png" alt="">
                 </div>
                 <div class="home__title">
-                    <p>
-                        <span id="anim"></span><span id="portfolio"></span>
-                        <br />
-                        <br />
-                    </p>
+                    <img src="./src/img/portfolio2.png" alt="">
                 </div>
-                <h1 class="intro_title">
-                    <p>DESIGN BY GYEONGMIN</p>
-                </h1>
+                <div class="intro_bottom">
+                    <div class="bo1">
+                        <p>ver.2024</p>
+                    </div>
+                    <div class="bo2">
+                        <p>@ GYEONGMIN all rights reserved.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section id="project">
+            <div class="pro_title">
+                <img src="./src/img/titleproject.png" alt="">
+            </div>         
+            <div class="mask">
+                <img src="./src/img/masking.png" alt="">
+            </div>
             <div id="home-slider">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide swiper-slide-one">
                             <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-left">
-                                    <h1><img src="./src/img/ordertocake.png" alt=""></h1>
+                                    <a href="https://www.figma.com/design/QAIeXV3Ecz8dQXMChjC2m8/Untitled?node-id=0-1">
+                                        <h1><img src="./src/img/ordertocake.png" alt=""></h1>
+                                    </a>
                                 </div>
                             </div>
                             <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-right">
-                                    <h2 class="happy"><a
-                                            href="https://www.figma.com/design/QAIeXV3Ecz8dQXMChjC2m8/Untitled?node-id=0-1">
-                                            Order to Cake</a></h2>
+                                    <h2 class="happy">Order to Cake</h2>
                                     <p class="paragraph">
                                         오투케는 원하는 날, 원하는 모양으로 특수하게 주문제작된
                                         케이크를 한 번에 볼 수 있게 모아둔 앱입니다.
                                         직접 디자인하여 나만의 케이크를 만들거나,
                                         이전에 주문한 도안을 선택해 레터링을 추가할 수 있습니다.
+                                        *Figma의 프로토타입으로만 제작되었습니다.
                                     </p>
+                                    <a href="https://www.figma.com/design/QAIeXV3Ecz8dQXMChjC2m8/Untitled?node-id=0-1" target="_blank">바로가기</a>
                                 </div>
                             </div>
                         </div>
@@ -90,6 +94,7 @@
                                         그런 소일베이커의 그릇들과 기프트세트 상품들을
                                         조금 더 잘 보여줄 수 있도록 재구성하여만든 페이지입니다.
                                     </p>
+                                    <a href="http://rudals2006.dothome.co.kr/24.03.04[%EC%86%8C%EC%9D%BC%EB%B2%A0%EC%9D%B4%EC%BB%A4]/index.html" target="_blank">바로가기</a>
                                 </div>
                             </div>
                         </div>
@@ -106,6 +111,7 @@
                                         영화를 주제로 하여 저만의 BEST영화를 선정하였으며 메뉴바를 만들고
                                         동영상과 이미지를Grid로 적절하게 구성하여만든 페이지입니다.
                                     </p>
+                                    <a href="http://rudals2006.dothome.co.kr/24.03.26[Grid]/grid1.html" target="_blank">바로가기</a>
                                 </div>
                             </div>
                         </div>
@@ -118,34 +124,42 @@
 
         <section id="graphics">
             <div class="graphics_inner">
-                <h2 class="gp_title">
-                    <p>Graphics</p>
-                </h2>
-                <div class="gp_wrap">
-                    <ul class="menu">
-                        <li><a href="#" data-filter=".card" class="active">Card Design</a></li>
-                        <li><a href="#" data-filter=".banner">Banner Design</a></li>
-                        <li><a href="#" data-filter=".detail">Detail Design</a></li>
-                    </ul>
-
-                    <div class="grid">
-                        <div class="grid-sizer"></div>
-                        <div class="grid-item card"><img src="./src/img/그래픽1.png" alt=""></div>
-                        <div class="grid-item card"><img src="./src/img/그래픽2.png" alt=""></div>
-                        <div class="grid-item card"><img src="./src/img/그래픽3.png" alt=""></div>
-                        <div class="grid-item banner"><img src="./src/img/가로 그래픽2.png" alt=""></div>
-                        <div class="grid-item banner"><img src="./src/img/가로 그래픽3.png" alt=""></div>
-                        <div class="grid-item detail">
-                            <a href="./src/img/디테일.png" data-lightbox="image-1">
-                                <img src="./src/img/디테일1.png" alt="디테일 이미지"></a>
-                        </div>
-                        <div class="grid-item card"><img src="./src/img/그래픽4.png" alt=""></div>
-                        <div class="grid-item banner"><img src="./src/img/가로 그래픽4.png" alt=""></div>
-                        <div class="grid-item banner"><img src="./src/img/가로 그래픽5.png" alt=""></div>
+                <div class="gp_title">
+                    <img src="./src/img/이름그래픽.png" alt="">
+                </div>
+                <div class="gp_content">
+                    <div class="item1">
+                        <img src="./src/img/그래픽1.png" alt="">
+                    </div>
+                    <div class="item2">
+                        <img src="./src/img/그래픽2.png" alt="">
+                    </div>
+                    <div class="item3">
+                        <img src="./src/img/그래픽3.png" alt="">
+                    </div>
+                    <div class="item4">
+                        <img src="./src/img/디테일.png" alt="">
+                    </div>
+                    <div class="item5">
+                        <img src="./src/img/가로 그래픽2.png" alt="">
+                    </div>
+                    <div class="item6">
+                        <img src="./src/img/가로 그래픽3.png" alt="">
+                    </div>
+                    <div class="item7">
+                        <img src="./src/img/그래픽4.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
+
+        <div class="modal" id="imageModal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="modalImage">
+            <div class="caption" id="caption"></div>
+            <div class="prev" id="prev">&#10094;</div>
+            <div class="next" id="next">&#10095;</div>
+        </div>
 
 
 
@@ -153,72 +167,40 @@
         <section id="publishing">
             <div class="publishing_inner">
                 <div class="pb_bk">
-                    <a href="https://check.so" class="btn-shine" target="_blank">Publishing</a>
+                    <a href="#" class="btn-shine" target="_blank">Publishing</a>
                 </div>
                 <div class="pub_wrap">
                     <article class="pub_item p1">
-                        <span class="num"><b>01.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/뮤고박스.png" alt=""></a>
+                        <a href="http://rudals2006.dothome.co.kr/24.01.22[%EB%AE%A4%EA%B3%A0%EB%B0%95%EC%8A%A4]/index.html" target="_blank" class="img"><img src="./src/img/mugobox.png" alt=""></a>
                         <p class="img_text">뮤고박스</p>
-                        <h3 class="title">뮤고박스</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.01.22[%EB%AE%A4%EA%B3%A0%EB%B0%95%EC%8A%A4]/index.html"
-                            target="_blank" class="site">사이트 보기</a>
                     </article>
                     <article class="pub_item p2">
-                        <span class="num"><b>02.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/ifkakao.png" alt=""></a>
+                        <a href="http://rudals2006.dothome.co.kr/23.12.11/flex.html" target="_blank" class="img"><img src="./src/img/ifkakao.png" alt=""></a>
                         <p class="img_text">ifkakao</p>
-                        <h3 class="title">ifkakao</h3>
-                        <a href="http://rudals2006.dothome.co.kr/23.12.11/flex.html#" target="_blank" class="site">사이트
-                            보기</a>
                     </article>
                     <article class="pub_item p3">
-                        <span class="num"><b>03.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/nexon pc방.png" alt=""></a>
+                        <a href="http://rudals2006.dothome.co.kr/23.12.13%20[Nexon]/index.html" target="_blank" class="img"><img src="./src/img/nexonpc방.png" alt=""></a>
                         <p class="img_text">Nexon</br>pc방</p>
-                        <h3 class="title">Nexon pc방</h3>
-                        <a href="http://rudals2006.dothome.co.kr/23.12.13%20[Nexon]/index.html" target="_blank"
-                            class="site">사이트 보기</a>
                     </article>
                     <article class="pub_item p4">
-                        <span class="num"><b>04.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/텐바이텐.png" alt=""></a>
+                        <a href="http://rudals2006.dothome.co.kr/24.01.18%20[%ED%85%90%EB%B0%94%EC%9D%B4%ED%85%90]/2024.04.01[%ED%85%90%EB%B0%94%EC%9D%B4%ED%85%90]/index.html" target="_blank" class="img"><img src="./src/img/tenbyten.png" alt=""></a>
                         <p class="img_text">텐바이텐</p>
-                        <h3 class="title">텐바이텐</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.01.18%20[%ED%85%90%EB%B0%94%EC%9D%B4%ED%85%90]/2024.04.01[%ED%85%90%EB%B0%94%EC%9D%B4%ED%85%90]/index.html"
-                            target="_blank" class="site">사이트 보기</a>
+                    </article>
+                    <article class="pub_item p5">
+                        <a href="http://rudals2006.dothome.co.kr/24.01.25[woodamlighting]/index.html" target="_blank" class="img"><img src="./src/img/woodam.png" alt=""></a>
+                        <p class="img_text">우담라이팅</p>
                     </article>
                     <article class="pub_item p6">
-                        <span class="num"><b>06.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/test1.png" alt=""></a>
-                        <p class="img_text">우담라이팅</p>
-                        <h3 class="title">우담라이팅</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.01.25[woodamlighting]/index.html" target="_blank"
-                            class="site">사이트 보기</a>
+                        <a href="http://rudals2006.dothome.co.kr/24.01.29[%EC%99%95%EA%B0%80%ED%83%95%ED%9B%84%EB%A3%A8]/index.html" target="_blank" class="img"><img src="./src/img/왕가탕후루.png" alt=""></a>
+                        <p class="img_text">왕가탕후루</p>
                     </article>
                     <article class="pub_item p7">
-                        <span class="num"><b>07.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/왕가탕후루.png" alt=""></a>
-                        <p class="img_text">왕가탕후루</p>
-                        <h3 class="title">왕가탕후루</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.01.29[%EC%99%95%EA%B0%80%ED%83%95%ED%9B%84%EB%A3%A8]/index.html"
-                            target="_blank" class="site">사이트 보기</a>
+                        <a href="http://rudals2006.dothome.co.kr/24.04.04[%EC%95%84%EC%BD%94%EB%94%94%EC%98%A8]/index.html" target="_blank" class="img"><img src="./src/img/왕의지밀.png" alt=""></a>
+                        <p class="img_text">왕의지밀</p>
                     </article>
                     <article class="pub_item p8">
-                        <span class="num"><b>08.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/왕의지밀.png" alt=""></a>
-                        <p class="img_text">왕의지밀</p>
-                        <h3 class="title">왕의지밀</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.04.04[%EC%95%84%EC%BD%94%EB%94%94%EC%98%A8]/index.html"
-                            target="_blank" class="site">사이트 보기</a>
-                    </article>
-                    <article class="pub_item p10">
-                        <span class="num"><b>10.</b></span>
-                        <a href="#" target="_blank" class="img"><img src="./src/img/flexcuc.png" alt=""></a>
+                        <a href="http://rudals2006.dothome.co.kr/24.02.01[swiper2]/index.html#" target="_blank" class="img"><img src="./src/img/flexcuc.png" alt=""></a>
                         <p class="img_text">Flexcuc</p>
-                        <h3 class="title">Flexcuc</h3>
-                        <a href="http://rudals2006.dothome.co.kr/24.02.01[swiper2]/index.html#" target="_blank"
-                            class="site">사이트 보기</a>
                     </article>
                 </div>
             </div>
@@ -255,9 +237,9 @@
                         </div>
                         <div class="ab_cer">
                             <h4>Certificate</h4>
-                            <p><span class="date">2016</span>운전면허 2종</p>
-                            <p><span class="date">2020</span>제빵기능사</p>
-                            <p><span class="date">2024</span>웹디자인기능사</p>
+                            <p><span class="date">2016</span>&emsp;운전면허 2종</p>
+                            <p><span class="date">2020</span>&emsp;제빵기능사</p>
+                            <p><span class="date">2024</span>&emsp;웹디자인기능사</p>
                         </div>
                         <div class="ab_skill">
                             <h4>Skills</h4>
@@ -267,17 +249,17 @@
                     <div class="ri2">
                         <div class="ab_edu">
                             <h4>Education</h4>
-                            <p><span class="date">2016</span>선일여자고등학교 졸업</p>
-                            <p><span class="date">2021</span>벡석예술대학교 졸업</p>
-                            <p><span class="date">2024</span>MBC아카데미 신림점 수료</p>
+                            <p><span class="date">2016</span>&emsp;선일여자고등학교 졸업</p>
+                            <p><span class="date">2021</span>&emsp;벡석예술대학교 졸업</p>
+                            <p><span class="date">2024</span>&emsp;MBC아카데미 신림점 수료</p>
                         </div>
                         <div class="ab_car">
                             <h4>Careers</h4>
-                            <p><span class="date">2019.04-2020.05</span>서오릉 달 카페</p>
-                            <p><span class="date">2020.05-2022.04</span>텐파이프 구파발점</p>
-                            <p><span class="date">2022.06-2023.07</span>투썸플레이스 신촌대로점</p>
-                            <p><span class="date">2023.08-2023.11</span>스타벅스 숭실대역점</p>
-                            <p><span class="date">2023.11-2024.06</span>달리는커피 신림역점</p>
+                            <p><span class="date">2019.04-2020.05</span>&emsp;서오릉 달 카페</p>
+                            <p><span class="date">2020.05-2022.04</span>&emsp;텐파이프 구파발점</p>
+                            <p><span class="date">2022.06-2023.07</span>&emsp;투썸플레이스 신촌대로점</p>
+                            <p><span class="date">2023.08-2023.11</span>&emsp;스타벅스 숭실대역점</p>
+                            <p><span class="date">2023.11-2024.06</span>&emsp;달리는커피 신림역점</p>
                         </div>
                         <div class="ab_key">
                             <h4>Keywords</h4>
@@ -295,33 +277,18 @@
 
     <script type="module" src="./src/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
     <script>
         var mySwiper = new Swiper(".swiper-container", {
             direction: "vertical",
             loop: true,
             pagination: ".swiper-pagination",
-            grabCursor: true,
             speed: 1000,
-            paginationClickable: true,
-            parallax: true,
             autoplay: false,
             effect: "slide",
             mousewheelControl: 1
         });
-
-
-
-        $('.menu li a').on('click', function (event) {
-            event.preventDefault();
-            var filterValue = $(this).attr('data-filter');
-
-            $grid.isotope({ filter: filterValue });
-
-            $('.menu li a').removeClass('active');
-            $(this).addClass('active');
-        });
+        
 
     </script>
 
