--- a/index.html
+++ b/index.html
@@ -58,15 +58,13 @@
             <div id="home-slider">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide swiper-slide-one">
+                        <div class="swiper-slide">
                             <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-left">
                                     <a href="https://www.figma.com/design/QAIeXV3Ecz8dQXMChjC2m8/Untitled?node-id=0-1">
                                         <h1><img src="./src/img/ordertocake.png" alt=""></h1>
                                     </a>
                                 </div>
-                            </div>
-                            <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-right">
                                     <h2 class="happy">Order to Cake</h2>
                                     <p class="paragraph">
@@ -85,8 +83,6 @@
                                 <div class="swiper-image-inner swiper-image-left">
                                     <h1><img src="./src/img/soilbaker.png" alt=""></h1>
                                 </div>
-                            </div>
-                            <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-right">
                                     <h2 class="happy">Soil Baker</h2>
                                     <p class="paragraph">
@@ -103,8 +99,6 @@
                                 <div class="swiper-image-inner swiper-image-left">
                                     <h1><img src="./src/img/bestmovie.png" alt=""></h1>
                                 </div>
-                            </div>
-                            <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-right">
                                     <h2 class="happy">Best Movie</h2>
                                     <p class="paragraph">
