--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                         <div class="swiper-slide">
                             <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-left">
-                                    <h1><img src="./src/img/soilbaker.png" alt=""></h1>
+                                    <a href="http://rudals2006.dothome.co.kr/24.03.04[%EC%86%8C%EC%9D%BC%EB%B2%A0%EC%9D%B4%EC%BB%A4]/index.html">
+                                        <h1><img src="./src/img/soilbaker.png" alt=""></h1>
+                                    </a>
                                 </div>
                                 <div class="swiper-image-inner swiper-image-right">
                                     <h2 class="happy">Soil Baker</h2>
@@ -97,7 +99,9 @@
                         <div class="swiper-slide">
                             <div class="swiper-image">
                                 <div class="swiper-image-inner swiper-image-left">
-                                    <h1><img src="./src/img/bestmovie.png" alt=""></h1>
+                                    <a href="http://rudals2006.dothome.co.kr/24.03.26[Grid]/grid1.html">
+                                        <h1><img src="./src/img/bestmovie.png" alt=""></h1>
+                                    </a>
                                 </div>
                                 <div class="swiper-image-inner swiper-image-right">
                                     <h2 class="happy">Best Movie</h2>
